--- a/src/scss/crm-support.scss
+++ b/src/scss/crm-support.scss
@@ -5,10 +5,22 @@ a {
   text-decoration: none;
 }
 
+.phone {
+  display: none;
+}
+
 .svg {
   &-sprites {
     @include svg-sprites;
   }
+  //&-arrow {
+  //  &-slider {
+  //    @include arrow-slider;
+  //  }
+  //  &-sliderNext {
+  //    transform: rotate(180deg);
+  //  }
+  //}
 }
 
 .page {
@@ -99,33 +111,25 @@ a {
     }
     &-block {
       display: flex;
-      column-gap: 3.75rem;
+      gap: 3.75rem;
+      flex-wrap: wrap;
+      justify-content: space-between;
     }
     &-item {
       background-color: $white;
       border: 0.1rem solid $grey;
       box-shadow: 0px 11px 25px -14px rgba(0, 0, 0, 0.39);
       border-radius: 3px;
-      padding: 3rem;
+      padding: 2.5rem;
       display: flex;
       flex-direction: column;
+      justify-content: space-between;
+      height: 34.1rem;
       color: $dark;
-      row-gap: 3rem;
+      overflow: hidden;
+      //row-gap: 3rem;
     }
   }
-  //&-costs {
-  //  background-color: $cyan;
-  //  &-cont {
-  //    padding-top: 3.75rem;
-  //    padding-bottom: 3.75rem;
-  //    color: $white;
-  //  }
-  //  &-header {
-  //    font-weight: 350;
-  //    font-size: 5rem;
-  //    line-height: 1;
-  //  }
-  //}
 }
 
 .pros-item {
@@ -164,8 +168,8 @@ a {
   &-item {
     color: $dark;
     &-img {
-      width: 40px;
-      height: 40px;
+      width: 5rem;
+      height: 5rem;
       object-fit: cover;
     }
     &-header {
@@ -180,27 +184,31 @@ a {
     }
     &-btn {
       font-weight: 400;
-      font-size: 20px;
+      font-size: 2.5rem;
       line-height: 1;
-      width: 157px;
-      height: 44px;
-      border: 1px solid $dark;
+      width: 19.6rem;
+      height: 5.5rem;
+      border: 0.1rem solid $dark;
       border-radius: 3px;
-      padding: 12px 20px;
+      padding: 1.5rem 2.5rem;
       color: $dark;
       background: $white;
+      display: flex;
+      column-gap: 2.5rem;
+      align-items: center;
+      &:hover {
+        background-color: $cyan;
+        color: $white;
+        border: none;
+      }
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.5rem;
+      line-height: 1;
     }
   }
 }
-//.costs {
-//  &-item {
-//    &-img {
-//      width: 5rem;
-//      height: 5rem;
-//      object-fit: cover;
-//    }
-//  }
-//}
 
 @media (max-width : 1060px) {
   html {
@@ -225,6 +233,29 @@ a {
       background-position: bottom;
       background-position-x: 40%;
     }
+    &-costs {
+      &-block {
+        column-gap: 2.8rem;
+      }
+    }
+  }
+
+  .costs {
+    &-item {
+      &-header {
+        font-size: 2.7rem;
+      }
+      &-text {
+        font-size: 2rem;
+      }
+      &-btn {
+        font-size: 2.4rem;
+        width: 18rem;
+        height: 5rem;
+        padding: 1rem 2rem;
+        column-gap: 1.7rem;
+      }
+    }
   }
 }
 
@@ -234,12 +265,41 @@ a {
       text-align: center;
       font-size: 7rem;
     }
+    &-costs {
+      &-cont {
+        align-items: center;
+      }
+      &-block {
+        justify-content: center;
+      }
+      &-item {
+        padding: 1.8rem;
+      }
+    }
+  }
+
+  .costs {
+    &-item {
+      &-btn {
+        font-size: 2rem;
+        width: 13.5rem;
+        padding: 0.7rem 1rem;
+        column-gap: 1rem;
+      }
+      &-btnVector {
+        font-size: 2rem;
+      }
+    }
   }
 }
 
 @media (max-width : 500px) {
   html {
     font-size: 4px;
+  }
+
+  .phone {
+    display: block;
   }
 
   .page {
