--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -167,11 +167,18 @@
       padding: 1.5rem 2.5rem;
       color: $dark;
       background: $white;
+      display: flex;
+      column-gap: 2.5rem;
       &:hover {
         border: none;
         color: $white;
         background-color: $cyan;
       }
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.5rem;
+      line-height: 1;
     }
   }
 }
