--- a/src/scss/crm-support.scss
+++ b/src/scss/crm-support.scss
@@ -196,6 +196,7 @@ a {
       display: flex;
       column-gap: 2.5rem;
       align-items: center;
+      cursor: pointer;
       &:hover {
         background-color: $cyan;
         color: $white;
