--- a/src/scss/maintenance.scss
+++ b/src/scss/maintenance.scss
@@ -46,6 +46,8 @@ a {
       padding-top: 3.75rem;
       padding-bottom: 3.75rem;
       color: $dark;
+      position: relative;
+      z-index: 2;
     }
     &-block {
       display: flex;
@@ -107,21 +109,21 @@ a {
 
   &-costs {
     padding-top: 3.75rem;
-    padding-bottom: 7.5rem;
+    padding-bottom: 3.75rem;
+    color: $white;
     display: flex;
     flex-direction: column;
     row-gap: 3.75rem;
     &-header {
-      padding-bottom: 3.75rem;
       font-weight: 350;
       font-size: 5rem;
       line-height: 1;
-      color: $dark;
       text-align: start;
     }
     &-block {
       display: flex;
-      column-gap: 3.75rem;
+      gap: 3.75rem;
+      flex-wrap: wrap;
       justify-content: center;
     }
     &-item {
@@ -132,7 +134,14 @@ a {
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      height: 30.1rem;
+      height: 34.1rem;
+      background-color: $white;
+      color: $dark;
+      overflow: hidden;
+      &:hover {
+        background: #FAFAFA;
+        box-shadow: 0 2px 2px -2px rgba(0, 0, 0, 0.39);
+      }
     }
   }
 }
@@ -152,6 +161,7 @@ a {
     bottom: 0%;
     left: 45%;
     height: 85%;
+    z-index: 0;
   }
 }
 
@@ -184,6 +194,20 @@ a {
       padding: 1.5rem 2.5rem;
       color: $dark;
       background: $white;
+      display: flex;
+      column-gap: 2.5rem;
+      align-items: center;
+      cursor: pointer;
+      &:hover {
+        border: none;
+        color: $white;
+        background-color: $cyan;
+      }
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.5rem;
+      line-height: 1;
     }
   }
 }
@@ -223,12 +247,15 @@ a {
       height: 5.6rem;
       width: 15.2rem;
       border: 0.15rem solid $grey;
+      &:hover {
+        border: none;
+        background-color: $black;
+      }
     }
     &-img {
-      width: 380px;
-      height: 448px;
+      width: 60rem;
+      height: 56rem;
       position: relative;
-      bottom: 25px;
       display: flex;
       flex-direction: column;
       &-girl {
@@ -237,7 +264,7 @@ a {
       }
       &-shadow {
         position: relative;
-        bottom: 17%;
+        bottom: 22%;
         left: 3%;
         z-index: 0;
       }
@@ -278,6 +305,72 @@ a {
       background-position: bottom;
       background-position-x: 40%;
     }
+    &-costs {
+      &-block {
+        column-gap: 2.8rem;
+      }
+    }
+
+    &-list {
+      &-block {
+        width: 60%;
+      }
+    }
+  }
+
+  .maintenance {
+    &-imgGirl {
+      left: 30%;
+      height: 75%;
+      width: 65%;
+    }
+  }
+
+  .costs {
+    &-item {
+      &-header {
+        font-size: 2.7rem;
+      }
+      &-text {
+        font-size: 2rem;
+      }
+      &-btn {
+        font-size: 2.4rem;
+        width: 18rem;
+        height: 5rem;
+        padding: 1rem 2rem;
+        column-gap: 1.7rem;
+      }
+    }
+  }
+}
+
+@media (max-width : 750px) {
+  .maintenance {
+    &-imgGirl {
+      left: 40%;
+      height: 65%;
+      width: 55%;
+    }
+  }
+
+  .page {
+    &-list {
+      &-block {
+        width: 60%;
+      }
+    }
+  }
+
+  .support {
+    &-care {
+      &-block {
+        width: 50%;
+      }
+      &-title {
+        font-size: 7rem;
+      }
+    }
   }
 }
 
@@ -286,6 +379,107 @@ a {
     &-title {
       text-align: center;
       font-size: 7rem;
+    }
+
+    &-costs {
+      &-cont {
+        align-items: center;
+      }
+      &-block {
+        justify-content: center;
+      }
+      &-item {
+        padding: 1.8rem;
+      }
+    }
+  }
+
+  .costs {
+    &-item {
+      &-btn {
+        font-size: 2rem;
+        width: 13.5rem;
+        padding: 0.7rem 1rem;
+        column-gap: 1rem;
+      }
+      &-btnVector {
+        font-size: 2rem;
+      }
+    }
+  }
+
+  .maintenance {
+    &-imgGirl {
+      left: 40%;
+      height: 55%;
+      width: 60%;
+    }
+  }
+}
+
+@media (max-width : 550px) {
+  .desktop {
+    display: none;
+  }
+
+  .page {
+    &-list {
+      &-block {
+        width: 100%;
+      }
+      &-blueTitle {
+        text-align: center;
+        font-size: 7.5rem;
+      }
+      &-title {
+        font-size: 5rem;
+      }
+      &-img {
+        width: 6rem;
+        height: 6rem;
+      }
+      &-text {
+        font-size: 4.5rem;
+      }
+    }
+  }
+
+  .support {
+    &-care {
+      height: auto;
+      &-cont {
+        flex-direction: column;
+      }
+      &-block {
+        width: 100%;
+        text-align: center;
+        align-items: center;
+      }
+      &-title {
+        font-size: 10rem;
+      }
+      &-text {
+        font-size: 4rem;
+      }
+      &-btn {
+        width: 23.8rem;
+        height: 8.3rem;
+        font-size: 3.3rem;
+      }
+    }
+  }
+
+  .maintenance {
+    &-list {
+      display: flex;
+      flex-direction: column-reverse;
+    }
+    &-imgGirl {
+      position: relative;
+      align-self: center;
+      left: initial;
+      height: 100%;
+      width: 100%;
     }
   }
 }
@@ -312,6 +506,45 @@ a {
         height: 6rem;
         object-fit: contain;
       }
+    }
+
+    &-costs {
+      &-item {
+        padding: 3rem;
+        row-gap: 5rem;
+        height: auto;
+      }
+    }
+  }
+
+  .costs {
+    &-item {
+      &-img {
+        width: 10rem;
+        height: 10rem;
+      }
+      &-header {
+        font-size: 5rem;
+      }
+      &-text {
+        font-size: 4.5rem;
+      }
+      &-btn {
+        font-size: 5rem;
+        width: 31rem;
+        height: 8rem;
+        column-gap: 3rem;
+        padding: 1rem 2rem;
+      }
+      &-btnVector {
+        font-size: 5rem;
+      }
+    }
+  }
+
+  .maintenance {
+    &-description {
+      font-size: 4.5rem;
     }
   }
 }
