deleted in all styles files .container and added .container in style.scss. Blog: changed img numbers on numbers, changed with colums grid, deleted grid-rows = made adaptive design

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -12,8 +12,21 @@
 .svg-sprites{
   display: none;
 }
+
 .list-item-img {
   width: 3rem;
   height: 3rem;
   object-fit: cover;
+}
+
+.container {
+  @include widthContainer;
+  padding: 0 15rem;
+}
+
+@media (max-width : 1240px) {
+  .container {
+    padding-left: 4rem;
+    padding-right: 4rem;
+  }
 }
