--- a/src/scss/blog.scss
+++ b/src/scss/blog.scss
@@ -1,11 +1,6 @@
 @import "utils/typography";
 @import "utils/vars";
 
-.container {
-  @include widthContainer;
-  padding: 0 15rem;
-}
-
 .page {
   &-breadcrumbs {
     @include breadcrumbs;
@@ -31,9 +26,19 @@
     position: relative;
     left: 50%;
     transform: translate(-50%, 0);
+
+    color: $cyan;
+    &:hover {
+      background-color: $cyan;
+      color: $white;
+    }
+
     &-arrow {
-      width: 1.62rem;
-      height: 1.25rem;
+      //width: 1.62rem;
+      //height: 1.25rem;
+      font-weight: 700;
+      font-size: 2rem;
+      transform: rotate(270deg);
     }
   }
 }
@@ -45,15 +50,16 @@
   &-content {
     margin-bottom: 2.5rem;
     display: grid;
-    grid-template-columns: repeat(4, 25%);
-    grid-template-rows: repeat(4, 25%);
+    grid-template-columns: repeat(4, 1fr);
     gap: 2.5rem;
     &-bigNews {
-      grid-area: 1 / 1 / 2 / 3;
+      height: 54.6rem;
+      grid-column: 1 / 3;
     }
     &-item {
       display: flex;
       flex-direction: column;
+      height: 54.6rem;
     }
     &-img {
       width: 100%;
@@ -83,10 +89,23 @@
     column-gap: 2.87rem;
     justify-content: center;
     padding-bottom: 4.25rem;
-    &-img {
+    &-number {
+      font-weight: 500;
+      font-size: 1.87rem;
+      line-height: 1.2;
+      color: $cyan;
+      padding: 1.12rem 0.37rem;
+      border: 0.1rem solid $cyan;
+      border-radius: 50%;
       width: 4rem;
       height: 4rem;
-      object-fit: cover;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      &:hover {
+        color: $white;
+        background-color: $cyan;
+      }
     }
   }
 }
@@ -111,48 +130,5 @@
       z-index: 2;
       background-color: #fff;
     }
-  }
-
-  &-item1-3 {
-    grid-area: 1 / 3 / 2 / 4;
-  }
-  &-item1-4 {
-    grid-area: 1 / 4 / 2 / 5;
-  }
-  &-item2-1 {
-    grid-area: 2 / 1 / 3 / 2;
-  }
-  &-item2-2 {
-    grid-area: 2 / 2 / 3 / 3;
-  }
-  &-item2-3 {
-    grid-area: 2 / 3 / 3 / 4;
-  }
-  &-item2-4 {
-    grid-area: 2 / 4 / 3 / 5;
-  }
-  &-item3-1 {
-    grid-area: 3 / 1 / 4 / 2;
-  }
-  &-item3-2 {
-    grid-area: 3 / 2 / 4 / 3;
-  }
-  &-item3-3 {
-    grid-area: 3 / 3 / 4 / 4;
-  }
-  &-item3-4 {
-    grid-area: 3 / 4 / 4 / 5;
-  }
-  &-item4-1 {
-    grid-area: 4 / 1 / 5 / 2;
-  }
-  &-item4-2 {
-    grid-area: 4 / 2 / 5 / 3;
-  }
-  &-item4-3 {
-    grid-area: 4 / 3 / 5 / 4;
-  }
-  &-item4-4 {
-    grid-area: 4 / 4 / 5 / 5;
   }
 }
