--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -140,7 +140,7 @@
     }
     &-btn {
       font-weight: 400;
-      font-size: 2.5rem;
+      font-size: 3rem;
       line-height: 1;
       width: 19.6rem;
       height: 5.5rem;
@@ -151,6 +151,7 @@
       background: $white;
       display: flex;
       column-gap: 2.5rem;
+      align-items: center;
       &:hover {
         border: none;
         color: $white;
@@ -272,11 +273,6 @@
     font-size: 6px;
   }
 
-  .container {
-    padding-left: 4rem;
-    padding-right: 4rem;
-  }
-
   .page {
     &-breadcrumbs {
       display: none;
@@ -328,7 +324,7 @@
 
   .support {
     &-care {
-      height: 66rem;
+      height: 80.5rem;
       &-cont {
         flex-direction: column;
       }
