Added component Costc and applyed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,7 @@
 @import 'all-pages/feedback-form';
 @import 'all-pages/breadcrumps';
 @import 'libs/swiper';
+@import 'all-pages/costs';
 
 .svg-sprites{
   display: none;
