--- a/src/scss/all-pages/costs.scss
+++ b/src/scss/all-pages/costs.scss
@@ -65,7 +65,7 @@
       column-gap: 2.5rem;
       align-items: center;
       &:hover {
-        border: none;
+        border: 0.1rem solid $cyan;
         color: $white;
         background-color: $cyan;
       }
