--- a/src/scss/optimization.scss
+++ b/src/scss/optimization.scss
@@ -72,7 +72,7 @@
       display: flex;
       flex-direction: column;
       row-gap: 2.5rem;
-      padding-bottom: 2.5rem;
+      padding-bottom: 5rem;
     }
     &-img {
       width: 3rem;
@@ -145,21 +145,32 @@
   }
 
   &-back {
-    width: 26.3%;
+    width: 31.4rem;
     height: 8rem;
     padding: 2.75rem 3.75rem;
-    display: flex;
-    column-gap: 2.5rem;
     font-weight: 400;
     font-size: 2.5rem;
     line-height: 1;
-    border: 1px solid $dark;
+    border: 0.1rem solid $dark;
     border-radius: 3px;
     background-color: transparent;
     margin-bottom: 2.5rem;
     justify-content: center;
     align-self: center;
+    display: flex;
+    column-gap: 2.5rem;
+    align-items: center;
     color: $dark;
+    &:hover {
+      background-color: $cyan;
+      color: $white;
+      border: 0.1rem solid $cyan;
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.5rem;
+      line-height: 1;
+    }
   }
 }
 
@@ -177,15 +188,31 @@
     &-img {
       width: 3.62rem;
       height: 3.25rem;
+      object-fit: cover;
+    }
+    &-title {
+      font-weight: 700;
+      font-size: 3.12rem;
+      line-height: 1.6;
+    }
+    &-state {
+      font-weight: 350;
+      font-size: 2rem;
+      line-height: 2.6rem;
+    }
+    &-icons {
+      display: flex;
+      gap: 3.75rem;
     }
     &-icon {
       width: 3.87rem;
       height: 3.87rem;
+      object-fit: cover;
     }
     &-btn {
       width: 57.4%;
       height: 13%;
-      border: 1px solid $dark;
+      border: 0.1rem solid $dark;
       border-radius: 3px;
       padding: 1.5rem;
       font-weight: 400;
@@ -195,6 +222,17 @@
       justify-content: center;
       column-gap: 1.87rem;
       background-color: transparent;
+      align-items: center;
+      &:hover {
+        border: 0.1rem solid $cyan;
+        color: $white;
+        background-color: $cyan;
+      }
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.5rem;
+      line-height: 1;
     }
   }
 }
@@ -273,6 +311,78 @@
     }
     &-img {
       width: 100%;
+    }
+  }
+}
+
+@media (max-width : 1024px) {
+  html {
+    font-size: 6px;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .optimization {
+    &-content {
+      width: 100%;
+      &-img {
+        margin-left: -4rem;
+        margin-right: -4rem;
+      }
+    }
+  }
+
+  .page-breadcrumbs {
+    display: none;
+  }
+}
+
+@media (max-width : 400px) {
+  html {
+    font-size: 4px;
+  }
+
+  .optimization {
+    &-content {
+      &-img {
+        background-size: contain;
+      }
+    }
+    &-back {
+      width: 59%;
+    }
+  }
+
+  .content {
+    &-description {
+      &-text {
+        font-size: 3rem;
+      }
+    }
+  }
+
+  .main {
+    &-optimization {
+      &-text {
+        font-size: 3rem;
+      }
+    }
+  }
+
+  .page {
+    &-list {
+      &-text {
+        font-size: 3rem;
+      }
+      &-img {
+        width: 4rem;
+        height: 4rem;
+      }
+      &-number {
+        font-size: 3rem;
+      }
     }
   }
 }
