--- a/src/scss/support.scss
+++ b/src/scss/support.scss
@@ -165,7 +165,7 @@
       width: 15.2rem;
       border: 0.15rem solid $grey;
       &:hover {
-        border: none;
+        border: 0.1rem solid $black;
         background-color: $black;
       }
     }
