--- a/src/scss/integrations.scss
+++ b/src/scss/integrations.scss
@@ -1,6 +1,10 @@
 @import "utils/typography";
 @import "utils/vars";
 
+.tablet {
+  display: none;
+}
+
 .page {
   &-title {
     @include page-title;
@@ -113,6 +117,11 @@
     display: flex;
     flex-direction: column;
     row-gap: 3.75rem;
+    &-text {
+      font-weight: 350;
+      font-size: 2.5rem;
+      line-height: 1.6;
+    }
   }
 
   &-content {
@@ -120,7 +129,7 @@
     color: $dark;
     height: 78.1rem;
     &-block {
-      width: 35%;
+      width: 55%;
     }
     &-cont {
       padding-top: 3.75rem;
@@ -139,13 +148,7 @@
 
 .content {
   &-img {
-    width: 80%;
-    position: relative;
-    left: 15%;
     &-block {
-      width: 80%;
-      position: relative;
-      bottom: 4rem;
       background: radial-gradient(50% 50% at 50% 50%, rgba(0, 178, 255, 0.2) 0%, rgba(90, 206, 255, 0) 100%);
     }
   }
@@ -161,9 +164,17 @@
   }
 }
 
-@media (max-width : 1060px) {
+@media (max-width : 1024px) {
   html {
     font-size: 6px;
+  }
+
+  .desktop {
+    display: none;
+  }
+
+  .tablet {
+    display: block;
   }
 
   .page {
@@ -178,6 +189,20 @@
     &-header {
       background-position: bottom;
       background-position-x: 40%;
+    }
+  }
+
+  .integrations {
+    &-content {
+      background-image: url("../img/integrations/cubes.png");
+      background-repeat: no-repeat;
+      background-size: 60%;
+      background-position-x: 110%;
+      background-position-y: 40%;
+      height: auto;
+      &-block {
+        width: 60%;
+      }
     }
   }
 }
@@ -203,7 +228,7 @@
 
     &-blueBtn {
       height: 8rem;
-      width: 50rem;
+      width: 40rem;
       position: relative;
       left: 35.5%;
       font-size: 3rem;
@@ -212,6 +237,38 @@
         width: 6rem;
         height: 6rem;
         object-fit: contain;
+      }
+    }
+
+    &-list {
+      &-img {
+        width: 6rem;
+        height: 6rem;
+      }
+      &-text {
+        font-size: 4.5rem;
+      }
+    }
+  }
+
+  .integrations {
+    &-content {
+      background-size: 120%;
+      background-position-x:center;
+      background-position-y: -5%;
+      height: 270rem;
+      &-block {
+        width: 100%;
+        padding-top: 105.5rem;
+      }
+      &-title {
+        font-size: 7.5rem;
+      }
+    }
+
+    &-description {
+      &-text {
+        font-size: 4.5rem;
       }
     }
   }
