--- a/src/scss/cases.scss
+++ b/src/scss/cases.scss
@@ -9,15 +9,24 @@
   }
 
   &-showMore {
-    width: 160rem;
+    width: 80%;
     height: 8rem;
     border: 0.1rem solid $cyan;
     border-radius: 3px;
     margin-left: 15rem;
     background-color: transparent;
+    color: $cyan;
+    &-vector {
+      rotate: 90deg;
+    }
     &-arrow {
-      width: 1.62rem;
-      height: 1.25rem;
+      font-weight: 350;
+      font-size: 2.25rem;
+    }
+    &:hover {
+      background-color: $cyan;
+      color: $white;
+      transition: .5s cubic-bezier(0.61, 0.63, 1, 1);
     }
   }
 }
@@ -36,22 +45,31 @@
       display: flex;
       height: 37.5rem;
       border-radius: 3px;
+      background-repeat: no-repeat;
+      background-position-x: 60%;
+      background-size: contain;
     }
     &-item1 {
       background-color: #F9FDFF;
+      background-image: url("../img/cases/image1.png");
     }
     &-item2 {
       background-color: $grey;
+      background-image: url("../img/cases/image2.2.png");
     }
     &-item3 {
       background-color: $black;
       color: $white;
+      background-image: url("../img/cases/image4.png");
     }
     &-item4 {
       background-color: #FFF7EB;
+      background-image: url("../img/cases/image6.png");
+
     }
     &-item5 {
       background-color: #EAF1FB;
+      background-image: url("../img/cases/image7.png");
     }
   }
 }
@@ -65,7 +83,7 @@
       display: flex;
       flex-direction: column;
       justify-content: space-between;
-      width: 34.8%;
+      width: 24.8%;
       position: relative;
     }
   }
@@ -146,8 +164,68 @@
     line-height: 1;
     background-color: transparent;
     cursor: pointer;
+    transition: .5s cubic-bezier(0.61, 0.63, 1, 1);
+    &:hover {
+      background-color: $cyan;
+      border: 0.1rem solid $cyan;
+      color: $white;
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.5rem;
+      line-height: 1;
+    }
   }
   &-btn3 {
     color: $white;
+    border: 0.1rem solid $white;
+  }
+}
+
+@media (max-width : 1024px) {
+  html {
+    font-size: 6px;
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+    &-showMore {
+      margin-left: 4rem;
+      align-self: center;
+    }
+  }
+
+  .cases {
+    padding-top: 3rem;
+    border-top: 0.1rem solid #d9d9d9;
+    &-content {
+      padding-left: 4rem;
+    }
+  }
+}
+
+@media (max-width : 838px) {
+  .cases {
+    &-content {
+      &-item {
+        background-position-x: 120%;
+      }
+    }
+  }
+
+  .content {
+    &-item {
+      &-block {
+        width: 35%;
+      }
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
   }
 }
