--- a/src/scss/project.scss
+++ b/src/scss/project.scss
@@ -1,15 +1,18 @@
 @import "utils/typography";
 @import "utils/vars";
 
-.page {
-  &-breadcrumbs {
-    @include breadcrumbs;
-
-    &-text {
-      @include breadcrumbs-text;
+.svg {
+  &-arrow {
+    &-slider {
+      @include arrow-slider;
+    }
+    &-sliderNext {
+      transform: rotate(180deg);
     }
   }
+}
 
+.page {
   &-title {
     @include page-title;
   }
@@ -17,63 +20,262 @@
   &-arrow {
     height: 1.75rem;
   }
+
+  &-cases {
+    &-swiper {
+      display: flex;
+      column-gap: 2.3rem;
+      padding-bottom: 3.75rem;
+      align-items: center;
+    }
+  }
+
+  &-look {
+    &-href {
+      font-weight: 350;
+      font-size: 1.9rem;
+      line-height: 1.1;
+      color: #01C2FF;
+      text-decoration: underline;
+    }
+  }
 }
 
 .project {
-  &-others {
+  background-color: #EAF1FB;
+  height: 150rem;
+  padding-top: 6rem;
+  &-cont {
     display: flex;
-    column-gap: 2rem;
-    align-items: center;
-    &-img {
-      width: 4rem;
-      height: 4rem;
-    }
-    &-img2 {
-      transform: rotate(180deg);
-    }
+    justify-content: space-between;
+    color: $dark;
+    column-gap: 2.6rem;
+  }
+  &-logo {
+    width: 40.25rem;
+    object-fit: cover;
+  }
+  &-content {
+    display: flex;
+    flex-direction: column;
+    row-gap: 5rem;
     &-text {
-      color: $cyan;
-      text-decoration: underline;
       font-weight: 350;
-      font-size: 1.8rem;
-      line-height: 1;
+      font-size: 2.25rem;
+      line-height: 1.5;
     }
+    &-adaptation {
+      display: flex;
+      border-bottom: 0.1rem solid #D3DCE8;
+      padding-bottom: 3.75rem;
+    }
+    &-result {
+      display: flex;
+      flex-direction: column;
+      row-gap: 5rem;
+    }
+  }
+  &-aside {
+    display: flex;
+    flex-direction: column;
+    row-gap: 3.75rem;
+    position: relative;
+    top: -15rem;
+  }
+  &-info {
+    background: #FAFAFA;
+    padding: 2.5rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 2.5rem;
+    border: 0.1rem solid $grey;
+    &-item {
+      display: flex;
+      column-gap: 1rem;
+      a {
+        color: #7399EC;
+        text-decoration: underline;
+      }
+    }
+  }
+  &-screen {
+    position: relative;
+    top: -30rem;
+    display: flex;
+    flex-direction: column;
+    row-gap: 3.75rem;
+    margin-bottom: -30rem;
+  }
+  &-img {
+    width: 68%;
   }
 }
 
 .connection {
   &-block {
+    background: #FAFAFA;
+    padding: 5rem 6rem 2.5rem 6rem;
     display: flex;
     flex-direction: column;
-    row-gap: 3.8rem;
-    background: #FAFAFA;
-    border: 1px solid $grey;
+    border: 0.1rem solid $grey;
     border-radius: 3px;
-    padding: 5rem 5.25rem 2.5rem 5.25rem;
     align-items: center;
     text-align: center;
-    width: 24.6%;
+    row-gap: 3.12rem;
     &-img {
-      width: 3.62rem;
+      width: 3.75rem;
       height: 3.25rem;
+      object-fit: cover;
+    }
+    &-title {
+      font-weight: 700;
+      font-size: 3.1rem;
+      line-height: 1.6rem;
+    }
+    &-state {
+      font-weight: 350;
+      font-size: 1.8rem;
+      line-height: 1.6;
+    }
+    &-btn {
+      font-weight: 400;
+      font-size: 2.25rem;
+      line-height: 1;
+      padding: 1.8rem;
+      display: flex;
+      justify-content: center;
+      column-gap: 1.8rem;
+      border: 0.1rem solid $dark;
+      border-radius: 3px;
+      cursor: pointer;
+      background-color: transparent;
+      transition: .5s cubic-bezier(0.61, 0.63, 1, 1);
+      &:hover {
+        background-color: $cyan;
+        border: 0.1rem solid $cyan;
+        color: $white;
+      }
+    }
+    &-btnVector {
+      font-weight: 400;
+      font-size: 2.25rem;
+      line-height: 1;
+    }
+    &-icons {
+      display: flex;
+      column-gap: 3.75rem;
+      justify-content: center;
     }
     &-icon {
       width: 3.87rem;
       height: 3.87rem;
+      object-fit: cover;
     }
-    &-btn {
-      width: 57.4%;
-      height: 13%;
-      border: 1px solid $dark;
-      border-radius: 3px;
-      padding: 1.5rem;
-      font-weight: 400;
-      font-size: 2.25rem;
+  }
+}
+
+.content {
+  &-adaptation {
+    &-title {
+      font-weight: 500;
+      font-size: 5rem;
       line-height: 1;
-      display: flex;
-      justify-content: center;
-      column-gap: 1.87rem;
-      background-color: transparent;
+      padding-bottom: 2.25rem;
     }
+    &-text {
+      font-weight: 350;
+      font-size: 2.25rem;
+      line-height: 1.5;
+    }
+    &-block {
+      width: 50%;
+    }
+  }
+
+  &-result {
+    &-title {
+      font-weight: 500;
+      font-size: 5rem;
+      line-height: 1;
+      text-align: center;
+    }
+    &-block {
+      display: flex;
+      justify-content: space-between;
+    }
+  }
+}
+
+.result {
+  &-block {
+    &-title {
+      font-weight: 600;
+      font-size: 4.3rem;
+      line-height: 1.5;
+      color: #FF7200;
+    }
+    &-text {
+      font-weight: 350;
+      font-size: 1.75rem;
+      line-height: 1.5;
+    }
+  }
+}
+
+.info {
+  &-item {
+    &-title {
+      font-weight: 600;
+      font-size: 2rem;
+      line-height: 1.56;
+    }
+    &-text {
+      font-weight: 350;
+      font-size: 2rem;
+      line-height: 1.56;
+    }
+  }
+}
+
+.swiper-arrows {
+  display: flex;
+  column-gap: 2.4rem;
+}
+
+@media (max-width : 1024px) {
+  html {
+    font-size: 6px;
+  }
+
+  .page {
+    &-breadcrumbs {
+      display: none;
+    }
+  }
+}
+
+@media (max-width : 720px) {
+  .content {
+    &-adaptation {
+      &-img {
+        display: none;
+      }
+      &-block {
+        width: 100%;
+      }
+    }
+  }
+
+  .project {
+    height: 110rem;
+    &-aside {
+      top: -6rem;
+    }
+  }
+}
+
+@media (max-width : 500px) {
+  html {
+    font-size: 4px;
   }
 }
