--- a/src/scss/about.scss
+++ b/src/scss/about.scss
@@ -7,8 +7,13 @@
     &-block {
         height: 104.37rem;
         display: flex;
-        flex-direction: column;
-        justify-content: center;
+        &-cont {
+            align-self: center;
+        }
+        &-cont4 {
+            padding-left: 15rem;
+            width: 50%;
+        }
     }
     &-block1 {
         background-color: $black;
@@ -20,11 +25,26 @@
     }
     &-block2 {
         color: $dark;
+        display: grid;
+        grid-template-rows: repeat(2, auto);
+        grid-template-columns: repeat(2, auto);
+        &-imgHand {
+            position: relative;
+            z-index: 0;
+        }
+        &-imgPlant {
+            position: relative;
+            z-index: 0;
+            left: -40%;
+            top: -50%;
+        }
     }
     &-block3 {
         background-image: url("../img/about/about-bgd2.png");
         color: $white;
         background-repeat: no-repeat;
+        position: relative;
+        z-index: 1;
     }
     &-block4 {
         color: $dark;
@@ -51,23 +71,98 @@
             column-gap: 2.75rem;
         }
     }
-
     &-cont {
-        width: 35%;
         display: flex;
         flex-direction: column;
         row-gap: 6.25rem;
+    }
+    &-cont1 {
+        width: 50%;
+    }
+    &-cont2 {
+        padding-top: 10.75rem;
+        position: relative;
+        z-index: 3;
+    }
+    &-text2 {
+        width: 60%;
+        justify-self: center;
+        position: relative;
+        z-index: 3;
+    }
+    &-cont3 {
+        width: 50%;
     }
 }
 
 .block4 {
     &-img {
         &-mans {
-            width: 114.6rem;
-            height: 78.25rem;
+            height: 75%;
+            align-self: center;
         }
         &-manDance {
 
+        }
+    }
+}
+
+@media (max-width : 1024px) {
+    html {
+        font-size: 6px;
+    }
+
+    .page {
+        &-breadcrumbs {
+            display: none;
+        }
+    }
+
+    .about {
+        &-block1 {
+            background-position: 175%;
+            height: 93.3rem;
+        }
+    }
+}
+
+@media (max-width : 400px) {
+    html {
+        font-size: 4px;
+    }
+
+    .about {
+        &-block1 {
+            height: 241rem;
+            background-position: top;
+            background-size: 140%;
+        }
+        &-cont {
+            width: 100%;
+        }
+        &-cont1 {
+            position: relative;
+            top: 40%;
+            box-shadow: 0 -10rem 10rem 5rem #000;
+        }
+        &-tittle {
+            font-size: 7.5rem;
+        }
+        &-bluText {
+            font-size: 4.5rem;
+        }
+        &-text {
+            font-size: 5rem;
+        }
+
+        &-block2 {
+            height: 190rem;
+        }
+        &-block3 {
+            height: 244.75rem;
+        }
+        &-block4 {
+            height: 184.25rem;
         }
     }
 }
